--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,19 @@
       <style>
          html, body { margin:0; padding:0; height:100%; }
          #map { position: fixed;width:100%; height:100vh;background-color: white;z-index: 0;}
+
+         /* Override Leaflet's default control icon */
+        .leaflet-retina .leaflet-control-layers-toggle {
+          background-image: url("/assets/layer-icon.svg") !important;
+          background-size: 26px 26px !important;
+        }
+
+        /* Override border + background for touch controls */
+        .leaflet-touch .leaflet-control-layers,
+        .leaflet-touch .leaflet-bar {
+          border: 1px solid #1e3050 !important;
+          background-clip: padding-box !important;
+        }
       </style>
    </head>
    <body>
