--- a/public/index.html
+++ b/public/index.html
@@ -14,14 +14,13 @@
          #map { position: fixed;width:100%; height:100vh;background-color: white;z-index: 0;}
 
          /* Override Leaflet's default control icon */
-        .leaflet-retina .leaflet-control-layers-toggle {
+        .leaflet-control-layers-toggle {
           background-image: url("/assets/layer-icon.svg") !important;
           background-size: 26px 26px !important;
         }
 
         /* Override border + background for touch controls */
-        .leaflet-touch .leaflet-control-layers,
-        .leaflet-touch .leaflet-bar {
+        .leaflet-control-layers {
           border: 1px solid #1e3050 !important;
           background-clip: padding-box !important;
         }
